Changes for Perl extension Padre-Plugin-Swarm

0.01 to be released
	- Creating the initial skeleton